# is_proyecto

./: CMakeLists.txt  Makefile  README.md  actividad.hpp  actividades.txt  datosUsuariosUCO.txt  director.cpp  mail.cpp  mail.hpp  main.cpp  organizador.cpp  organizador.hpp  panelActividades.cpp  panelActividades.cpp  panelActividades.hpp  readme.md  test.txt  usuarioRegistrado.cpp  usuarioRegistrado.hpp  usuarioVisitante.cpp  usuarioVisitante.hpp
src/: actividad.hpp  director.cpp  director.hpp  mail.hpp  main.cpp  organizador.cpp  panelActividades.cpp  panelActividades.hpp  usuarioRegistrado.cpp  usuarioRegistrado.hpp  usuarioVisitante.cpp  usuarioVisitante.hpp
tests/: test_historia_1.cpp  test_historia_2.cpp  test_historia_3.cpp
